# ESPWait

./: .gitignore  CMakeLists.txt  code1.txt  comments.txt  log1.txt  partitions.csv  sdkconfig  sdkconfig.old
components/S2LP_Library/: CMakeLists.txt
components/access/: CMakeLists.txt  access.c
components/aes/: CMakeLists.txt  aes.c  keys.c
components/cmd_nvs/: CMakeLists.txt  cmd_nvs.c  cmd_nvs.h
components/converter/: CMakeLists.txt  converter.c
components/cpptest/: CMakeLists.txt  CppTest.cpp  CppTest.h
components/crypto/: CMakeLists.txt  crypto.c
components/lorawan/: CMakeLists.txt  MainLoop.c  MainLoop.h  channels.c  channels.h  commands.c  commands.h  device.c  device.h  eui.c  eui.h  lorawan.c  lorawan.h  lorawan_defs.h  lorawan_types.h  lorax.c  lorax.h  power.c  power.h  stub.c  users.c  users.h
components/message/: .gitignore  CMakeLists.txt  message.c
components/my_http/: CMakeLists.txt  my_http.c
components/my_server/: CMakeLists.txt  esp_tls_wolfssl.c  my_server.c  my_server.h
components/my_server/server/: package-lock.json  package.json
components/my_server/server/src/: App.vue  comments.txt  main.js  router.js  store.js
components/my_server/server/src/assets/css/: my.css
components/my_server/server/src/views/: About.vue  Accounts.vue  Devices.vue  Login.vue  Logout.vue  Settings.vue
components/nvs_partition/: CMakeLists.txt  cmd_nvs.h  cmt.bat  params.c  partitions.csv  sx1276_params.csv
components/radio/: CMakeLists.txt  radio.c  sx1276_hal.c  sx1276_hal.h  (+2 more)
main/: CMakeLists.txt  main.c  main.h  spi_intf.c  spi_intf.h
(+26 files in other folders)
